{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 54,
  "lineage": "c698bb8c-6e77-3cf7-2f89-043332254c42",
  "resources": [
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_subnet",
      "name": "vpc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-04ccd6096bffe2a44",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:148889286790:subnet/subnet-04ccd6096bffe2a44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-central-1a",
            "availability_zone_id": "mec1-az1",
            "available_ip_address_count": 8185,
            "cidr_block": "172.16.128.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ccd6096bffe2a44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148889286790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Bestdoc-Uae-Public-Sub-0",
              "TIer": "Public"
            },
            "vpc_id": "vpc-019d0518a473539ec"
          }
        },
        {
          "index_key": "subnet-05fcc0b2dcb1dfd30",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:148889286790:subnet/subnet-05fcc0b2dcb1dfd30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-central-1b",
            "availability_zone_id": "mec1-az2",
            "available_ip_address_count": 8186,
            "cidr_block": "172.16.160.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fcc0b2dcb1dfd30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148889286790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Bestdoc-Uae-Public-Sub-1",
              "TIer": "Public"
            },
            "vpc_id": "vpc-019d0518a473539ec"
          }
        },
        {
          "index_key": "subnet-074b9abbfc33b2150",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:148889286790:subnet/subnet-074b9abbfc33b2150",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-central-1c",
            "availability_zone_id": "mec1-az3",
            "available_ip_address_count": 8186,
            "cidr_block": "172.16.192.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074b9abbfc33b2150",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148889286790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Bestdoc-Uae-Public-Sub-2",
              "TIer": "Public"
            },
            "vpc_id": "vpc-019d0518a473539ec"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:148889286790:vpc/vpc-019d0518a473539ec",
            "cidr_block": "172.16.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04127d17af49c50e4",
                "cidr_block": "172.16.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-06edf0c16ac039df4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Bestdoc-Uae-MyVPC."
                ]
              }
            ],
            "id": "vpc-019d0518a473539ec",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-038851e630ecfd8eb",
            "owner_id": "148889286790",
            "tags": {
              "Name": "Bestdoc-Uae-MyVPC."
            }
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "BD-UAE-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:me-central-1:148889286790:loadbalancer/app/BD-UAE-LB/05c93cb630054c8b",
            "arn_suffix": "app/BD-UAE-LB/05c93cb630054c8b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "BD-UAE-LB-2063167072.me-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:me-central-1:148889286790:loadbalancer/app/BD-UAE-LB/05c93cb630054c8b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "BD-UAE-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01008fece8735d8c9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04ccd6096bffe2a44"
              },
              {
                "subnet_id": "subnet-05fcc0b2dcb1dfd30"
              },
              {
                "subnet_id": "subnet-074b9abbfc33b2150"
              }
            ],
            "subnets": [
              "subnet-04ccd6096bffe2a44",
              "subnet-05fcc0b2dcb1dfd30",
              "subnet-074b9abbfc33b2150"
            ],
            "vpc_id": "vpc-019d0518a473539ec",
            "xff_header_processing_mode": "append",
            "zone_id": "Z08230872XQRWHG2XF6I"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.alb.data.aws_subnet.vpc_subnet",
            "module.alb.data.aws_subnets.vpc_subnets",
            "module.alb.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "forntend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:me-central-1:148889286790:listener/app/BD-UAE-LB/05c93cb630054c8b/56befd0bf8d16ac0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:me-central-1:148889286790:listener/app/BD-UAE-LB/05c93cb630054c8b/56befd0bf8d16ac0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:me-central-1:148889286790:loadbalancer/app/BD-UAE-LB/05c93cb630054c8b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.BD-UAE-LB",
            "module.alb.aws_security_group.alb",
            "module.alb.data.aws_subnet.vpc_subnet",
            "module.alb.data.aws_subnets.vpc_subnets",
            "module.alb.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "messaging_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:me-central-1:148889286790:targetgroup/TG-messaging/8bc58104bdb4039a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:me-central-1:148889286790:listener-rule/app/BD-UAE-LB/05c93cb630054c8b/56befd0bf8d16ac0/a1cd78dd3a759319",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "messaging.bestdoc.ae"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:me-central-1:148889286790:listener-rule/app/BD-UAE-LB/05c93cb630054c8b/56befd0bf8d16ac0/a1cd78dd3a759319",
            "listener_arn": "arn:aws:elasticloadbalancing:me-central-1:148889286790:listener/app/BD-UAE-LB/05c93cb630054c8b/56befd0bf8d16ac0",
            "priority": 100,
            "tags": {
              "Name": "For Messaging"
            },
            "tags_all": {
              "Name": "For Messaging"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.BD-UAE-LB",
            "module.alb.aws_lb_listener.forntend",
            "module.alb.aws_lb_target_group.target-group",
            "module.alb.aws_security_group.alb",
            "module.alb.data.aws_subnet.vpc_subnet",
            "module.alb.data.aws_subnets.vpc_subnets",
            "module.alb.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:me-central-1:148889286790:targetgroup/TG-messaging/8bc58104bdb4039a",
            "arn_suffix": "targetgroup/TG-messaging/8bc58104bdb4039a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:me-central-1:148889286790:targetgroup/TG-messaging/8bc58104bdb4039a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "TG-messaging",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-019d0518a473539ec"
          },
          "dependencies": [
            "module.alb.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:148889286790:security-group/sg-01008fece8735d8c9",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01008fece8735d8c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "148889286790",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-019d0518a473539ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.data.aws_vpc.selected"
          ]
        }
      ]
    }
  ]
}